[package]
name = "dedup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha1 = "0.10.1"
walkdir = "2"
rayon = "1"
num_cpus = "1"
hex = "0"
serde_json = "1.0"
dialoguer = "0.10"
clap = { version="3.2", features=["derive"] }
anyhow = "1.0"
